<resources>
    <string name="app_name">Aura iTrain</string>
    <string name="first_person_name">Person 1 Name</string>
    <string name="second_person_name">Person 2 Name</string>
    <string name="app_site">aurafit.org</string>
    <string name="text_title">AURAFIT</string>
    <string name="text_description">Mobile Biofeedback System</string>
    <string name="action_settings">Settings</string>
    <string name="chakra_settings">Chakra settings</string>
    <string name="text_settings">Text settings</string>
    <string name="open_camera">TO MAKE THE \r SNAPSHOT</string>
    <string name="snapshot">Tap screen to take Snapshot\.\.\.</string>
    <string name="camera_back">Tap to go back and see your Aura\.\.\.</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="mode">MODE</string>
    <string name="share">Share</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="choose_photo_from_gallery">Choose photo from gallery</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_bluetooth_no_device_found">Device not founded. Please, pair device before use it</string>
    <string name="error_put_device_on">Please put bracelet on</string>
    <string name="wait">Wait</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="trying_message">Trying to connect</string>
    <string name="wait_disconn_message">Wait while disconnect\.\.\.</string>
    <string name="back_description">a background of the guest screen</string>
    <string name="subject">Your AuraFit Aura Chakra Photo</string>
    <string name="from_message"> Your AuraFit Aura Chakra Photo attached</string>
    <string name="send_message">Sending email\.\.\.</string>
    <string name="turn_on_message">Please check green light of sensor</string>
    <string name="conn_init_message">Connection is initiating</string>
    <string name="link">AuraFit.org</string>
    <string name="about_mesage">&#169; AuraFit Systems \n www.aurafit.org</string>
    <string name="take_photo_first">PLEASE TAKE PHOTO TO PROCEED!</string>
    <string name="turn_on_internet1">PLEASE PRESS HOME BUTTON, </string>
    <string name="turn_on_internet2">TURN ON INTERNET, PRESS ON APP’S ICON WAIGHT UNTIL THE PALLET WHEEL APPEARING  AND CONTINUE!</string>
    <string name="select_mode">Select Mode</string>
    <string name="appearence_category_title">Appearance</string>
    <string name="choose_photo_in_settings">Please select photo for aura </string>
    <string name="title_choose_photo_in_settings">Select photo </string>
    <string name="tap_to_start">Tap Screen to start</string>
    <string name="your_name">Enter your name</string>
    <string name="touch_sensor">Start</string>
    <string name="ok">OK</string>
    <string name="to_camera">To Camera</string>
    <string name="choose_pallet_color1">choose spontaneously your</string>
    <string name="choose_pallet_color2">3 favorite color</string>
    <string name="plugin_headphones1">Put headphones on,</string>
    <string name="plugin_headphones2">then play an Aura Fit iHeal program</string>
    <string name="apply_str">Apply</string>
    <string name="view_str">View</string>
    <string name="rename_str">Rename</string>
    <string name="del_str">Delete</string>
    <string name="files_loading">wait while files have being loaded</string>
    <string name="getting_json_array">Retrieving general info</string>
    <string name="select_picture">Select a photo image as background</string>
    <string name="hello">hello</string>
    <string name="wait_image_list">Wait while the photo list being composed</string>
    <string name="apply_image_as_backg">APPLY</string>
    <string name="view_backg_image">VIEW</string>
    <string name="apply_or_view">WOULD YOU LIKE TO APPLY THE IMAGE OR JUST VIEW\?</string>
    <string name="remove_corrupted_photo">Find out on your SD the %s folder and remove from there files that  aren’t jpg format or are corrupted. Or just shot a photo using in-app camera</string>
    <string name="wait_while_internet_switching_on">Wait while internet switching on</string>
    <string name="audio_path">/AuraImages/Audio/</string>
    <string name="wait_sound_list">Wait while the music list being composed</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="battery">battery</string>
    <string name="skin">Skin Temperature-Relaxation</string>
    <string name="pulse_v">Pulse Vibration</string>
    <string name="hrv_c">Blood Oxygen Saturation</string>
    <string name="hrv_v">HRV Voltage</string>
    <string name="gsr_r">GSR-Restistance</string>
    <string name="unit">unit</string>
    <string name="root_chakra">Root</string>
    <string name="naval_chakra">Sacral</string>
    <string name="solar_chakra">Solar Plexus</string>
    <string name="heart_chakra">Heart</string>
    <string name="throat_chakra">Throat</string>
    <string name="eye_chakra">Third Eye</string>
    <string name="top_chakra">Crown</string>
    <string name="chakra">"Chakra"</string>
    <string name="aura_size">Aura Size</string>
    <string name="deep_red">DEEP RED</string>
    <string name="red">RED</string>
    <string name="orange_red">ORANGE-RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="yellow_green">YELLOW-GREEN</string>
    <string name="green">GREEN</string>
    <string name="green_blue">GREEN-BLUE</string>
    <string name="blue_light">BLUE-LIGHT</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="lavender">LAVENDER </string>
    <string name="white">WHITE</string>
    <string name="orange_yellow">ORANGE-YELLOW</string>
    <string name="deep_green">DEEP GREEN</string>
    <string name="aura_chakra_balance">Aura Chakra Balance</string>
    <string name="personality_profile">Personality Profile</string>
    <string name="disconn_message">Verbindung wurde unterbrochen</string>
    <string name="graph">Grafik</string>
    <string name="aura">Aura</string>
    <string name="aurafit_systems">AURAFIT SYSTEMS</string>
    <string name="www_aurafit">www.aurafit.org</string>
    <string name="general_aura_color_overview">General Aura Color Overview</string>
    <string name="aurafit_report">AURAFIT ANALYSIS</string>
    <string name="fur">For:</string>
    <string name="date_str">Date:</string>
    <string name="time_str">Time:</string>
    <string name="activity">Activity</string>
    <string name="cardio_fitness">Your Cardio Fitness</string>
    <string name="total_steps">Total steps</string>
    <string name="distance">Distance</string>
    <string name="calorie">Calorie</string>
    <string name="sport_time">Sport time</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="light_sleep">Light sleep</string>
    <string name="day_rest_time">Day rest time</string>
    <string name="calories">calories</string>
    <string name="bpm">bpm</string>
    <string name="steps">steps</string>
    <string name="meters">meters</string>
    <string name="minutes">min</string>
    <string name="hours">h</string>
    <string name="up_to">&quot;up %s&quot;</string>
    <string name="down_to">&quot;down %s&quot;</string>
    <string name="yesterday">Previous</string>
    <string name="chakras_hide">Hide chakras points</string>
    <string name="chakras_show">Show chakras points</string>
    <string name="text_hide">Hide text</string>
    <string name="text_show">Show text</string>
    <string name="activity_show_error">Please, disconnect from aura mode first</string>
    <string name="photos">Photos</string>
    <string name="take_photo">Take photo</string>
    <string name="take_face_photo">Take Face Photo</string>
    <string name="take_full_photo">Take Full-body Photo</string>
    <string name="view_photo">View photo</string>
    <string name="input_image_name_prompt">Input new image name</string>
    <string name="report">Report</string>
    <string name="photo">Photo</string>
    <string name="chakra_overview">Chakra Overview</string>
    <string name="cardio_title">Chakra Energy Meter</string>
    <string name="cardio_zero">Measuring…</string>
    <string name="cardio_rest">Rest</string>
    <string name="cardio_athlete">Athlete</string>
    <string name="cardio_excellent">Excellent</string>
    <string name="cardio_great">Great</string>
    <string name="cardio_good">Good</string>
    <string name="cardio_average">Average</string>
    <string name="cardio_below_average">Below average</string>
    <string name="cardio_poor">Poor</string>
    <string name="low_battery_alert">"Low battery level(%1$s).\nPlease charge the bracelet"</string>
    <string name="graph_celsius">"C (Celsius)"</string>
    <string name="graph_hb">"HB (heartbeats)"</string>
    <string name="graph_percents">"(Percents)"</string>
    <string name="graph_hertz">"Hz (Hertz)"</string>
    <string name="graph_ohm">"(Ohm)"</string>
    <string name="stand_by_message">Please stand by…</string>
    <string-array name="first_page">
        <item>    </item>
        <item>Hello and thank you for using the Aurafit Mobile Biofeedback Technology!</item>
        <item> </item>
        <item>The AURAFIT SYSTEMS measure BIO-DATA through the mobile AuraFit bracelet. This data is analyzed, processed and correlated with your emotional-energetic states.</item>
        <item> </item>
        <item>We have grown to accept the fact that all individuals, all the time, are constantly expressing radiance, an aura, which is completely unique to our own personalities. But it is not only our own perceptions, which indicate that an aura field exists. There are countless descriptions of these phenomena from clairvoyants, people who are capable of perceiving or actually seeing the human energy field. Some of these sensitive and gifted individuals have proven again and again that they indeed have the ability to perceive a higher dimension of existence.</item>
        <item> </item>
        <item>Many scientists from all around the world have also researched these phenomena. Throughout history, many different names and descriptions have been given to the human life energy field around us. Depending on their cultural background, various scientists and other individuals have referred to this energy field as: Biofield, electro-magnetic field, life force, chi, ki, vital energy or as most people call it, the Aura.</item>
        <item>    </item>
        <item>    </item>
        <item>    </item>
        <item>If you like to contact us or like to know more please visit our website:</item>
        <item> </item>
        <item>www.aurafit.org ccappp</item>
    </string-array>
</resources>