<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/backg" />

    <ImageView
        android:id="@+id/background_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:scaleType="centerInside"
        android:visibility="visible"
        android:src="@drawable/title_constraint" />

    <LinearLayout
        android:id="@+id/chineseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="氣場智能"
            android:textColor="#aa3387"
            android:textSize="36sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手環"
            android:textColor="#dc7500"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:padding="2dp"
        android:text="@string/text_title"
        android:textColor="@color/primary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:padding="1dp"
        android:text="@string/text_title"
        android:textColor="@color/accent_transparent"
        android:textSize="37sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/background_main_title"
        android:layout_centerHorizontal="true"
        android:padding="0dp"
        android:text="@string/text_description"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tap_to_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:text="@string/tap_to_start"
        android:textColor="#ccc"
        android:textSize="22sp" />


</RelativeLayout>