<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".PartnersMode">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/partners_mode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/title_constraint"
                android:visibility="visible" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginBottom="15dp"
                android:text="@string/text_description"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="2dp"
                app:srcCompat="@drawable/custom_horizontal_divider" />

            <TextView
                android:id="@+id/person1_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/first_person_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/firstUser_aura_photo"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_action_name"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/person2_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/second_person_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/secondUser_aura_photo"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_action_name"
                app:tint="@color/white" />

            <LinearLayout
                android:id="@+id/partnersMode_check_compatibility_button"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/custom_compatibility_button"
                android:foreground="?android:selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="arial"
                    android:letterSpacing="0.1"
                    android:padding="0dp"
                    android:text="Check"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="arial"
                    android:letterSpacing="0.1"
                    android:padding="0dp"
                    android:text="Compatibility"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
</ScrollView>